# cristianismo_basico

./: .coverage  .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  QUALITY_REPORT.md  README.md  SESSION_STATE.md  pyproject.toml
.claude/: settings.local.json
docs/: apresentacao.html  index.html  visualizacao.html
src/: __main__.py  analyzer.py  chunker.py  config.py  extractor.py  models.py  output.py  pdf_report.py  pdf_splitter.py  pipeline.py  prompts.py  scholarly.py  scrollytelling.py  slides.py  validators.py
tests/: conftest.py  test_analyzer.py  test_chunker.py  test_config.py  test_extractor.py  test_html_audit.py  test_models.py  test_output.py  test_pdf_report.py  test_pdf_splitter.py  test_pipeline.py  test_scholarly.py  test_scrollytelling.py  test_slides.py  test_validators.py
