[project]
name = "cristianismo-basico"
version = "0.1.0"
description = "Extrator de teses e analise do livro Cristianismo Basico de John Stott"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.54.0",
    "PyMuPDF>=1.23.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "json-repair>=0.55.1",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
